feat: add more mission functionality
